# rs-hash-bench

./: .gitignore  Cargo.toml  README.md
src/: hasher.rs  lib.rs  my_ahash.rs  my_fastmurmur3.rs  my_highway.rs  my_murmur3.rs  my_rustc_hash.rs  my_seahash.rs  my_xxhash.rs
