[package]
name = "rs-hash-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
fastmurmur3 = "0.2.0"
highway = "1.1.0"
murmur3 = "0.5.2"
rand = "0.8.5"
rustc-hash = "1.1.0"
seahash = "4.1.0"
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }
